Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0-beta1
-
None
-
-
90d4f84f5 (15.0), 125d44360 (15.0), b1f1d563b (15.0)
Description
To reproduce:
1. Remove Android Sdk folder (in my case: ~/Android/Sdk).
2. Press "Set up SDK".
3. Wait until things are installed.
4. A new dialog appears:
Android SDK installation is missing necessary packages. Do you want to install the missing packages?
2 Android SDK packages shall be updated.
[Packages to be installed:]
cmdline-tools;latest
platform-tools
5. Press OK and accept all licenses.
6. The two mentioned packages had some issues since some log with red lines appeared for them. But it's hard to spot the details because the window closes automatically.
7. Again, the "Android SDK Changes" dialog appears. This time with:
Android SDK installation is missing necessary packages. Do you want to install the missing packages?
0 Android SDK packages shall be updated.
8. After pressing OK it looks like it's looped and we go to point 7 again.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-31837 Regression: Android Setup SDK leaves 2 red crosses
- Closed
- mentioned in
-
Page Loading...